# a2a-proxy

./: AGENT_AUTHENTICATION.md  Agents.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  STATUS_REPORT_NEW.md  debug_config.py  debug_config_test.py  implementation.md  llms.txt  mock_agent.py  proxy.md  pydantic_test.py  pyproject.toml  run-multiple-proxies.bat  run-multiple-proxies.sh  run-proxy.bat  run-proxy.sh  run.py  setup-dev.sh  start_proxy.py
.github/: copilot-instructions.md
config/: agent-registry.yaml  proxy-config-managed-identity.yaml  proxy-config.yaml  proxy-coordinator.yaml  proxy-critic.yaml  proxy-follower.yaml  proxy-writer.yaml
features/: manage-topics-automatically.md
src/: __init__.py  main.py
src/agents/: __init__.py  registry.py
src/config/: __init__.py  loader.py  models.py
src/core/: __init__.py  exceptions.py  interfaces.py  models.py  pending_requests.py
src/routing/: __init__.py  router.py
src/servicebus/: __init__.py  client.py  models.py  publisher.py  subscriber.py  subscription_manager.py  topic_manager.py  topic_manager_new.py  topic_manager_old.py
src/sessions/: __init__.py  file_store.py  manager.py  models.py
tests/: conftest.py  test_agent_registry.py  test_config.py  test_main.py  test_pending_requests.py  test_servicebus.py  test_sessions.py  test_topic_management_integration.py  test_topic_manager.py
